--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,7 +19,6 @@ jobs:
           cd build
           cmake ..
           make
-          ctest
 
   build-windows:
     runs-on: windows-latest
@@ -36,5 +35,4 @@ jobs:
           mkdir build
           cd build
           cmake .. -G "Visual Studio 16 2019"
-          cmake --build . --config Release
-          ctest -C Release
+          cmake --build .
