--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,4 +35,4 @@ jobs:
           mkdir build
           cd build
           cmake .. -G "Visual Studio 16 2019"
-          cmake --build .
+          cmake --build . --config Release
