--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -34,5 +34,5 @@ jobs:
           rm -r build
           mkdir build
           cd build
-          cmake .. -G "Visual Studio 16 2019"
+          cmake .. 
           cmake --build . --config Release
